--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BREW BEANS CO.</title>
 
     <!-- css link -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css">
 
     <!-- fontawesome -->
 
@@ -24,7 +24,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Barlow:wght@100&family=Black+Ops+One&family=Cousine&family=Croissant+One&family=Dancing+Script&family=Merriweather+Sans&family=Raleway:ital,wght@1,400;1,800;1,900&family=Ramaraja&family=Roboto&display=swap" rel="stylesheet" />
+
   </head>
+  
   <body>
     <!-- header -->
 
