--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BREW BEANS CO.</title>
 
     <!-- css link -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
 
     <!-- fontawesome -->
 
@@ -24,14 +24,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Barlow:wght@100&family=Black+Ops+One&family=Cousine&family=Croissant+One&family=Dancing+Script&family=Merriweather+Sans&family=Raleway:ital,wght@1,400;1,800;1,900&family=Ramaraja&family=Roboto&display=swap" rel="stylesheet" />
-
   </head>
-  
+
   <body>
     <!-- header -->
 
     <nav class="navbar">
-      <img src="https://static.vecteezy.com/system/resources/previews/000/553/512/original/coffee-drink-vector-icon.jpg" alt="coffeelogo" />
+      <img src="https://th.bing.com/th?id=OIP.9QOTMe0ijJE7uRxuvmQN9wHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="coffeelogo" />
       <p>BREW BEANS Co.</p>
     </nav>
 
@@ -58,7 +57,7 @@
         <p class="content">A 2017 review of clinical trials found that drinking coffee is generally safe within usual levels of intake and is more likely to improve health outcomes than to cause harm at doses of 3 or 4 cups of coffee daily. Exceptions include possible increased risk in women having bone fractures, and a possible increased risk in pregnant women of fetal loss or decreased birth weight. Results were complicated by poor study quality, and differences in age, gender, health status, and serving size.</p>
 
         <div class="contact-sticky">
-          <a href="#contact"><img src="https://brewscoffee.netlify.app/headset.webp" alt="headset" /></a>
+          <a href="#contact"><img src="https://th.bing.com/th?id=OIP.KVwClDy41LjyE8QoTeulUQHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="headset" /></a>
         </div>
       </div>
     </section>
@@ -87,7 +86,7 @@
 
         <!-- pic1 -->
         <div class="pic">
-          <img src="https://brewscoffee.netlify.app/STARBUCKS.jpg" alt="starbucks" />
+          <img src="https://th.bing.com/th/id/OIP.Uu4txegtrRhkhlZV0qPOYAHaFj?pid=ImgDet&rs=1" alt="starbucks" />
 
           <div class="intro">
             <h2 style="margin-left: 60px; font-size: 25px">1. STARBUCKS</h2>
@@ -106,7 +105,7 @@
             <p class="brand-para2">Bill Rosenberg opened Open Kettle in 1948, a restaurant selling donuts and coffee in Quincy, Massachusetts (a suburb of Boston), but he changed the name in 1950 to Dunkin' Donuts after discussing with company executives.[11][12] He conceived the idea for the restaurant after his experiences selling food in factories and at construction sites, where donuts and coffee were the two most popular items.</p>
           </div>
 
-          <img class="pic2" src="https://tse1.mm.bing.net/th?id=OIP.A1LaXB7aCDvKu1XLESKxIAD6D6&pid=Api&P=0" alt="donut" />
+          <img class="pic2" src="https://th.bing.com/th/id/OIP.Fl1TWZIXmxUDTYN_hTdlZQHaFj?w=219&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="donut" />
         </div>
 
         <br /><br />
@@ -114,7 +113,7 @@
 
         <!-- pic3 -->
         <div class="pic">
-          <img src="https://brewscoffee.netlify.app/PEET'S%20COFFEES.jpg" alt="peets" />
+          <img src="https://th.bing.com/th/id/OIP.GNpdRITyjisqOJx8iRPQXAHaE7?w=255&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="peets" />
 
           <div class="intro">
             <h2 style="margin-left: 60px; font-size: 25px">3. PEET'S COFFEE</h2>
@@ -134,7 +133,7 @@
             <p class="brand-para2">Costa Coffee was founded in London in 1971 by Sergio Costa as a wholesale operation supplying roasted coffee to caterers and specialist Italian coffee shops. It was acquired by Whitbread in 1995, sold in 2019 to The Coca-Cola Company in a deal worth £3.9bn, and has grown to 3,401 stores across 31 countries and 18,412 employees.</p>
           </div>
 
-          <img class="pic2" src="https://brewscoffee.netlify.app/COSTA%20COFFEE.jpg" alt="donut" />
+          <img class="pic2" src="https://th.bing.com/th/id/OIP.OyIjy8px_1aUEdPLiZ_YOAHaE8?w=258&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="donut" />
         </div>
 
         <br /><br />
@@ -143,7 +142,7 @@
         <!-- pic5 -->
 
         <div class="pic">
-          <img src="https://brewscoffee.netlify.app/Mc%20cafe.jpg" alt="peets" />
+          <img src="https://th.bing.com/th/id/OIP.bE710zeec0JF5sPSgshH_QHaE8?w=266&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="peets" />
 
           <div class="intro">
             <h2 style="margin-left: 60px; font-size: 25px">5. Mc CAFE</h2>
