--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BREW BEANS CO.</title>
 
     <!-- css link -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- fontawesome -->
 
