added button style

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
           <label for="message">query:</label>
           <input type="email" name="email" class="query" /><br />
           <br /><br />
+          <button class="btn" type="submit">SUBMIT</button>
         </center>
       </form>
     </section>
